完成分段功能开发，通过简易测试

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "ring_buffer.h": "c",
-        "vcruntime.h": "c"
+        "vcruntime.h": "c",
+        "ring_buffer_chapter.h": "c"
     }
 }
